--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node ./src/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "egon": "ts-node ./src/datasource/odrrp.ts"
   },
   "dependencies": {
     "@types/libxmljs": "^0.18.5",
@@ -19,6 +20,7 @@
     "libxmljs": "^0.19.7",
     "nodemon": "2.0.1",
     "proj4": "^2.6.1",
+    "sparqljson-parse": "^1.5.2",
     "ts-node": "8.5.3",
     "typescript": "3.7.2",
     "xml-js": "1.6.11"
