`Add`: Adding support to query SPARQL enpoints
Adding the ability to query the SPARQL endpoints, mainly the wikidata and
the RRP.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "ts-node ./src/index.ts",
     "test": "jest",
-    "egon": "ts-node ./src/datasource/odrrp.ts"
+    "egon": "ts-node ./src/datasource/sparql/odrrp.ts",
+    "wiki": "ts-node ./src/datasource/sparql/wikidata.ts"
   },
   "dependencies": {
     "@types/libxmljs": "^0.18.5",
